----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2009-11-10  Nicolas Sallin <henes@biclodon.com>
	* amiga-mui/subthread.c: The continue message must not be replied by the
	  parent thread so its async flag must be set. This fixes various random
	  crashes.

2009-10-26  Bernd Gollesch <bgollesch@speed.at>
	* amiga-mui/appicon.c: Change back to the old directory before unlocking the current one,
	  otherwise I get a visit from india.
	* amiga-mui/arexx.c: FILENAME was wrong in READINFO command.
	* amiga-mui/datatypescache.c: Added missing FreeVec().

2008-12-27  Bernd Gollesch <bgollesch@speed.at>
	* simplemail.c: The simplemail_gather_mails() function must also change the
	  current dir to the incoming folder otherwise some filter (header) will not work
	  (bugfix 2809986).

2008-12-23  Bernd Gollesch <bgollesch@speed.at>
	* addressbook.c: I have a new email-address.

2007-12-26  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/smtoolbarclass.c: Reverted back to the old version and included the
	  party fix in the correct way.

2007-12-24  Release Version 0.32

2007-12-24  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Don't draw outside object area.

2007-10-04  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/addressbookwnd.c: Information in the notes section of the addressbook
	  are now saved (bugfix #1425725).

2007-09-01  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/datatypescache.c, configuration.c, configuration.h,
	  doc/amiga/SimpleMail.guide: Added hidden config option "Don't use AISS".

2007-08-25  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/datatypescache.c: Corrected some bugs. The cache wasn't working at all.
	* amiga-mui/mailtreelistclass-new.c: Checked for the wrong value in MUIKEY_PRESS.

2007-02-25  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: The PrepareDisplayedColumns() function must be
	  called after the titlemenu is build.
